src/flyout.css
/* New */

.container {
  position: fixed;
  max-width: var(--readthedocs-flyout-max-width, 30em);
  width: auto;
  height: auto;
  max-height: calc(100% - 100px);
  overflow-y: auto;
}

.container.bottom-right {
  right: 20px;
  bottom: 50px;
}

.container.bottom-left {
  left: 20px;
  bottom: 50px;
}

.container.top-left {
  left: 20px;
  top: 50px;
}

.container.top-right {
  right: 20px;
  top: 50px;
}

:host {
  --addons-flyout-font-size: var(
    --readthedocs-flyout-font-size,
    var(--readthedocs-font-size, 0.8rem)
  );
}

:host > div {
  font-family: var(
    --readthedocs-flyout-font-family,
    "Lato",
    "proxima-nova",
    "Helvetica Neue",
    "Arial",
    "sans-serif"
  );
  font-size: var(--addons-flyout-font-size);
  line-height: 1.2em;
  color: var(--readthedocs-flyout-color, rgb(128, 128, 128));
  background-color: var(--readthedocs-flyout-background-color, rgb(39, 39, 37));
  z-index: 3000;
  padding: 0 10px;
  overflow-y: auto;
}

header {
  display: flex;
  flex-flow: row nowrap;
  gap: 1em;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  background-color: var(--readthedocs-flyout-background-color, rgb(39, 39, 37));
  position: sticky;
  top: 0px;
  font-size: var(--readthedocs-flyout-header-font-size, 1.25em);
}

header > img.logo {
  /* Total height of 1.5 + 0.5 + 0.5 = 2.5em */
  max-height: 1.5em;
  width: auto;
  padding: 0.5em 0em;
  /* Don't grow past content size, do shrink down to min-content */
  flex: 0 1 auto;
}

header > span {
  color: var(--readthedocs-flyout-current-version-color, #27ae60);
  /* Total height of 1 + 0.75 + 0.75 = 2.5em */
  padding: 0.75em 0em;
  line-height: 1em;
  /* Don't grow past content size or shrink below min-content */
  flex: 0 0 auto;
  /* Trim content to get ellipsis on wide content */
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

header > span.version {
  /* Grow to fill parent based on content width, shrink content when needed (for ellipsis) */
  flex: 1 1 auto;
}

header > span svg.icon {
  color: rgb(128, 128, 128);
  height: 1em;
  padding-right: 0.25em;
  vertical-align: middle;
}

main {
  padding: 5px;
  padding-bottom: 15px;
  margin-top: 5px;
}

main.closed {
  display: none;
}

dl {
  margin: 0;
  padding: 0;
}

dl > dt {
  font-size: var(
    --readthedocs-flyout-dt-font-size,
    calc(var(--addons-flyout-font-size) * 1.125)
  );
  color: var(--readthedocs-flyout-section-heading-color, rgb(128, 128, 128));
}

dl > dd {
  display: inline-block;
  margin: 0;
  font-size: var(
    --readthedocs-flyout-dd-font-size,
    calc(var(--addons-flyout-font-size) * 1.125)
  );
}

dd a {
  text-decoration: none;
  color: var(--readthedocs-flyout-item-link-color, rgb(252, 252, 252));
  padding: 6px;
  display: inline-block;
}

dd form {
  padding: 6px;
  margin: 0;
}

dd input {
  padding: 6px;
  font-size: 80%;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  margin: 20px 0;
  padding: 0;
  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: var(--readthedocs-flyout-divider-color, #413d3d);
}

small a {
  text-decoration: none;
  color: var(--readthedocs-flyout-link-color, rgb(42, 128, 185));
}

